--- a/index.html
+++ b/index.html
@@ -7,6 +7,47 @@
     <script defer src="./index.js"></script>
 </head>
 <body>
-    
+    <p class="text important">
+        XD
+    </p>
+    <p class="text">
+        Hola
+    </p>
+    <button class="button">Soy un boton normal</button>
+    <button class="button" disabled>Soy un boton normal</button>
+    <ul class="list">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
+    <ul class="list">
+        <li>A</li>
+        <li>B</li>
+        <li>C</li>
+    </ul>
+    <ul class="hoa">
+        <li>X</li>
+        <li>D</li>
+    </ul>
+    <form class="form-new-item">
+        <input type="text">
+        <input type="text">
+        <input type="number">
+    </form>
+    <form class="hola">
+        <input type="text">
+        <input type="text">
+        <input type="number">
+    </form>
+    <main class="main-content">
+        <h1 class="app-title">Bootcamp technologies</h1>
+        <section class="info">
+          <h2 class="subtitle">The MEAN stack</h2>
+          <p class="text">
+            The MEAN stack is the set of technologies used in the bootcamp by
+            FullStack Web Development.
+          </p>
+        </section>
+      </main>
 </body>
 </html>
