--- a/index.html
+++ b/index.html
@@ -49,5 +49,10 @@
           </p>
         </section>
       </main>
+      <article class="student">
+        <h2 class="student-name"></h2>
+        <span class="student-age"></span> years
+        <img class="student-photo" src="" alt="" />
+      </article>
 </body>
 </html>
